# jps.wasm

./: .gitignore  .gitmodules  README.md  package.json  pathfinding-jps-1.0.0.tgz
examples/minimal-example/: index.html  jps.d.ts  jps.js  jps.wasm
scripts/: build.sh  update_emcc.sh
src/: CMakeLists.txt  Grid.cpp  Grid.h  index.ts  main.cpp
src/typescript/: NodeVector.ts  vector.ts
src/wrappers/: index.ts  vector.ts
